--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@
   background-size: cover;
 } */
 
+.card-photo img {
+  height: 250px;
+  width: 100%;
+}
+
 .card-container {
   display: flex;
   justify-content: center;
@@ -43,13 +48,29 @@
   background-color: #8e52f5;
 }
 
+.contact-socials {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background: linear-gradient(90deg, #ff604d, #b1ffff); */
+  background-color: #89faf8;
+  flex-direction: column;
+  width: 100%;
+  height: 40vh;
+  position: relative;
+}
+
 .project-card {
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
+.project-card p {
+  color: white;
+}
 .about-content > ul {
   /* background: linear-gradient(90deg, #ff604d, #b1ffff); */
   list-style: none;
@@ -62,12 +83,13 @@
   display: flex;
   justify-content: space;
   padding: 0px 25px 0 0px;
+  font-size: large;
 }
 
 .navbar-container {
   background-color: #120458;
 }
-.project-container {
+.projects-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -95,6 +117,7 @@
   width: 100%;
   height: 10vh;
   background: #120458;
+  color: white;
 }
 
 @font-face {
